--- a/conference/ebplane2019/xdp-bpf-building-blocks.org
+++ b/conference/ebplane2019/xdp-bpf-building-blocks.org
@@ -683,15 +683,30 @@ Hopefully this presentation gave enough information
 XDP-project coordination:
 - https://github.com/xdp-project/xdp-project
 
-* Notes
+
+* Bonus slides                                                       :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
 
 ** Topic: XDP redirect into Guest-VM
 
 Makes sense: Using XDP for Guest-VM redirect
 - Allow skipping overhead of Host-OS network stack
 
-** Topic: How to test XDP
+** Slide: How to test XDP
 
+After veth got native-XDP support (v4.20), easiest test is
+- Writing scripts that setup veth namespaces for testing
+- Example: kernel/[[https://github.com/torvalds/linux/blob/v5.4-rc3/tools/testing/selftests/bpf/test_xdp_vlan.sh][tools/testing/selftests/bpf/test_xdp_vlan.sh]]
+
+Alternative use [[https://github.com/torvalds/linux/blob/v5.4-rc3/tools/lib/bpf/bpf.c#L519-L541][bpf_prog_test_run()]] ([[https://lore.kernel.org/netdev/20170331044543.4075183-1-ast@fb.com/][bpf-syscall BPF_PROG_TEST_RUN]])
+- Instead of attach: "run" loaded BPF-prog with bpf_prog_test_run()
+  - Provide constructed packet data input+output
+- Example: kernel/[[https://github.com/torvalds/linux/blob/v5.4-rc3/tools/testing/selftests/bpf/prog_tests/xdp.c][tools/testing/selftests/bpf/prog_tests/xdp.c]]
+
+
+* Notes
 ** Notes for: TC-BPF hook
 
 The TC 'da' option stand for 'direct-action' mode
