areas/mem: page_pool04_inflight_change ident commits to fix/revert
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem/page_pool04_inflight_changes.org
+++ b/areas/mem/page_pool04_inflight_changes.org
@@ -43,3 +43,34 @@ normal operation. I've look at using tracepoint to provide troubleshooting
 mechanisms, it does introduce a small overhead when activating a tracepoint,
 but when not troubleshooting the overhead is zero.  I've started writing
 [[https://github.com/xdp-project/xdp-project/blob/master/areas/mem/bpftrace/][bpftrace tools here]], but for now there is only a single tool.
+
+* Upstream patch with issue
+
+The main patch that caused this issue is:
+- d956a048cd3f ("xdp: force mem allocator removal and periodic warning")
+- link: https://git.kernel.org/torvalds/c/d956a048cd3f
+
+#+begin_example
+commit d956a048cd3fc1ba154101a1a50fb37950081ff6
+Author: Jesper Dangaard Brouer <brouer@redhat.com>
+Date:   Tue Jun 18 15:05:53 2019 +0200
+
+    xdp: force mem allocator removal and periodic warning
+    
+    If bugs exists or are introduced later e.g. by drivers misusing the API,
+    then we want to warn about the issue, such that developer notice. This patch
+    will generate a bit of noise in form of periodic pr_warn every 30 seconds.
+    
+    It is not nice to have this stall warning running forever. Thus, this patch
+    will (after 120 attempts) force disconnect the mem id (from the rhashtable)
+    and free the page_pool object. This will cause fallback to the put_page() as
+    before, which only potentially leak DMA-mappings, if objects are really
+    stuck for this long. In that unlikely case, a WARN_ONCE should show us the
+    call stack.
+    
+    Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>
+    Signed-off-by: David S. Miller <davem@davemloft.net>
+#+end_example
+
+TODO investigate if we can just revert this...
+
