areas/mem: assesed revert of commit d956a048cd3f
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem/page_pool04_inflight_changes.org
+++ b/areas/mem/page_pool04_inflight_changes.org
@@ -72,5 +72,9 @@ Date:   Tue Jun 18 15:05:53 2019 +0200
     Signed-off-by: David S. Miller <davem@davemloft.net>
 #+end_example
 
-TODO investigate if we can just revert this...
+** Investigated if we can just revert this.
+
+Assessment is that might be useful to keep around the periodic warning, but
+e.g. after 5 minutes.  This can help us spot bugs, where inflight packets
+never reach zero, indicating some kind of leak.
 
