--- a/areas/mem/page_pool04_inflight_changes.org
+++ b/areas/mem/page_pool04_inflight_changes.org
@@ -99,6 +99,13 @@ We keep the periodic warning via a work-queue, but increased interval to
 pages/packets never reach zero, indicating some kind of leak. These kind of
 bugs have been observed while converting drivers over to use page_pool API.
 
+Details on when to crash the kernel. If page_pool API is misused and
+somehow __page_pool_free() is invoked while there are still inflight
+frames, then (like before) a WARN() is triggered and not a BUG(). This can
+potentially lead to use-after-free, which we try to catch via poisoning the
+page_pool object memory with some NULL pointers. Doing it this way,
+pinpoint both the driver (likely) prematurely freeing page_pool via WARN(),
+and crash-dump for inflight page/packet show who to blame for late return.
 
 
 * Potential bug?
