--- a/areas/mem/bpftrace/README.org
+++ b/areas/mem/bpftrace/README.org
@@ -5,3 +5,10 @@
 This directory contains some tracing tools based on [[https://github.com/iovisor/bpftrace][bpftrace]], which is a
 high-level tracing language for Linux eBPF.
 
+* Troubleshooting
+
+These scripts depend on bpftrace features in versions higher than v0.9.2.
+
+As of this writing, no official version above v0.9.2, have been released.
+Thus, you have to [[https://github.com/iovisor/bpftrace/blob/master/INSTALL.md][install latest bpftrace]] GitHub version.
+
