areas/mem: page_pool04_inflight_changes potential bug addressed in patch2
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem/page_pool04_inflight_changes.org
+++ b/areas/mem/page_pool04_inflight_changes.org
@@ -122,6 +122,8 @@ the last element. This blocks producers from using fast-path, and consumer
 
 * Potential bug?
 
+*Update*: below issue should be addressed in patch2.
+
 I think, I might have spotted a potential bug in the shutdown phase, or at
 least something that can be made more safe/robust during shutdown.
 
